--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a concise, expressive, extensible and ubiquitous assertion library",
   "main": "./doesit.js",
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "scripts": {
@@ -17,7 +18,7 @@
     "assertion",
     "assert"
   ],
-  "author": "self@alz.so",
+  "author": "Alan Clarke <code@alz.io> (alz.io)",
   "bugs": {
     "url": "https://github.com/alanclarke/doesit/issues"
   },
@@ -33,5 +34,6 @@
   },
   "dependencies": {
     "lodash-compat": "^3.8.0"
-  }
+  },
+  "license": "ISC"
 }
